--- a/app/src/main/res/layout/activity_view_themes.xml
+++ b/app/src/main/res/layout/activity_view_themes.xml
@@ -84,4 +84,16 @@
         tools:listitem="@layout/anime_list_item_layout" />
 
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:adSize="BANNER"
+        app:adUnitId="@string/testId"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
