--- a/app/src/main/res/layout/explore_anime_fragment.xml
+++ b/app/src/main/res/layout/explore_anime_fragment.xml
@@ -58,7 +58,6 @@
             android:id="@+id/upcoming_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
@@ -71,7 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/adView2" />
+            app:layout_constraintTop_toBottomOf="@+id/adView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/upcomingView"
@@ -257,12 +256,12 @@
             app:layout_constraintTop_toBottomOf="@+id/upcomingView" />
 
         <com.google.android.gms.ads.AdView
-            android:id="@+id/adView2"
+            android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:adSize="BANNER"
-            app:adUnitId="@string/admobid"
+            app:adUnitId="@string/testId"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
