--- a/app/src/main/res/layout/activity_view_anime.xml
+++ b/app/src/main/res/layout/activity_view_anime.xml
@@ -311,7 +311,7 @@
 
         </com.google.android.material.tabs.TabLayout>
 
-        <androidx.fragment.app.FragmentContainerView
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/fragmentContainerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
