--- a/app/src/main/res/layout/voice_acting_role_item_layout.xml
+++ b/app/src/main/res/layout/voice_acting_role_item_layout.xml
@@ -14,7 +14,6 @@
         android:id="@+id/view2"
         android:layout_width="0.1dp"
         android:layout_height="0.1dp"
-        android:background="@color/gnt_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +29,7 @@
         android:maxLines="3"
         android:text="@string/movie_title"
         android:textColor="@color/textColor"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toEndOf="@+id/animePoster"
@@ -47,7 +46,7 @@
         android:maxLines="3"
         android:text="@string/movie_title"
         android:textColor="@color/textColor"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/characterImageView"
         app:layout_constraintStart_toEndOf="@+id/view2"
@@ -84,10 +83,11 @@
         android:id="@+id/role"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:fontFamily="sans-serif-medium"
         android:maxLines="1"
-        android:textSize="15sp"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/animePoster"
         app:layout_constraintEnd_toStartOf="@+id/view2"
         app:layout_constraintStart_toEndOf="@+id/animePoster" />
