--- a/app/src/main/res/layout/activity_view_anime.xml
+++ b/app/src/main/res/layout/activity_view_anime.xml
@@ -40,7 +40,7 @@
 
 
         <ImageButton
-            android:id="@+id/menuButton2"
+            android:id="@+id/menuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
