--- a/app/src/main/res/layout/activity_view_person.xml
+++ b/app/src/main/res/layout/activity_view_person.xml
@@ -35,11 +35,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-
         <ImageButton
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="16dp"
             android:src="@drawable/ic_baseline_arrow_back_ios_24"
